tests/mm0_mmu/fail/bad-sort3142.mmu
-- bad modifier order
(sort s3142 provable pure free strict)